--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "postcss src/styles.css --output src/css/styles.css",
+    "watch": "postcss src/styles.css --output src/css/styles.css --watch"
   },
   "dependencies": {
+    "i18next": "^23.2.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.2",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
@@ -18,13 +20,8 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "postcss-cli": "^10.1.0",
+    "postcss": "^8.4.26",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.1.0"
-  },
-  "main": "vite.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
