--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "i18next": "^23.2.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
